clusters/k8s-ws-terra-v2/istio-system/gateway-kubeflex.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: gateway-kubeflex
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: kubeflex-tls
      hosts:
      - "workshop.tharindukalhara.me"
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: false
      hosts:
      - "workshop.tharindukalhara.me/"
